--- a/font/iconfont.css
+++ b/font/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3860808 */
-  src: url('iconfont.woff2?t=1673939310363') format('woff2'),
-       url('iconfont.woff?t=1673939310363') format('woff'),
-       url('iconfont.ttf?t=1673939310363') format('truetype');
+  src: url('iconfont.woff2?t=1673969417919') format('woff2'),
+       url('iconfont.woff?t=1673969417919') format('woff'),
+       url('iconfont.ttf?t=1673969417919') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,18 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-QQ:before {
+  content: "\e882";
+}
+
+.icon-shoucang:before {
+  content: "\eca7";
+}
+
+.icon-weibo:before {
+  content: "\e8bb";
 }
 
 .icon-fanhuidingbu-:before {
