--- a/css/course-list.css
+++ b/css/course-list.css
@@ -40,7 +40,7 @@
     line-height: 32px;
     left: 119px;
     top: -7px;
-    background-image: url(https://static.mukewang.com/static/img/index-v3/ranking1.png);
+    background-image: url(/images/list/ranking1.png);
     font-size: 18px;
     font-weight: 600;
     text-align: center;
@@ -55,7 +55,7 @@
     line-height: 32px;
     left: 119px;
     top: -7px;
-    background-image: url(https://static.mukewang.com/static/img/index-v3/ranking2.png);
+    background-image: url(/images/list/ranking2.png);
     font-size: 18px;
     font-weight: 600;
     text-align: center;
@@ -70,7 +70,7 @@
     line-height: 32px;
     left: 119px;
     top: -7px;
-    background-image: url(https://static.mukewang.com/static/img/index-v3/ranking3.png);
+    background-image: url(/images/list/ranking3.png);
     font-size: 18px;
     font-weight: 600;
     text-align: center;
